Fix footer overflow

--- a/public/css/app.styl
+++ b/public/css/app.styl
@@ -93,6 +93,7 @@ html, body
   color: #aaa;
   font-weight: 300;
   border-top: 1px solid #cecece;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   line-height: 20px;
 
